--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/wwwroot/css/site.css
@@ -166,6 +166,13 @@ a {
     padding-right:10px;
     overflow-x:scroll;
 }
+#InfoValue1 {
+    display: flex;
+    border-left: 2px solid grey;
+    border-right: 2px solid grey;
+    padding-right: 10px;
+    overflow-x: scroll;
+}
 #InformBar {
     margin-top: 50px;
     font-size: 16px;
@@ -628,6 +635,12 @@ a {
 }
 .horizontal {
     display: flex;
+    gap: 20px;
+    margin-left: 10px;
+}
+.horizontal1 
+{
+    display: block;
     gap: 20px;
     margin-left: 10px;
 }
