--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/ChangedKonfigPlan.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Konfigurator/ChangedKonfigPlan.cshtml
@@ -284,7 +284,8 @@
 
     let boolArray = [];
 
-    function bolleanCheked() {
+    function bolleanCheked() 
+    {
         let dorCounter = document.querySelectorAll("#inputTur");
         let keyCounter = document.querySelectorAll("#inputS");
         let boolV = document.getElementById('vBool');
@@ -301,7 +302,8 @@
         boolV.value = boolArray;
     }
 
-    function chekedNameArientiren(value, id) {
+    function chekedNameArientiren(value, id) 
+    {
         let allKeyName = document.querySelectorAll("#inputS");
 
         let cheker = 1;
@@ -316,7 +318,8 @@
         }
 
     }
-    function chekedNameArienKey(value, id) {
+    function chekedNameArienKey(value, id)
+    {
         let allTurName = document.querySelectorAll("#inputTur");
         let cheker = 1;
 
@@ -331,21 +334,24 @@
             cheker++;
         }
     }
-    function Plus(turNumber) {
+    function Plus(turNumber) 
+    {
         let BlockTur = document.querySelector(`#BlockTur-${turNumber}`);
         let countTur = BlockTur.querySelector("#infoButten");
         let count = countTur.value;
         count++;
         countTur.value = count;
     }
-    function Minus(turNumber) {
+    function Minus(turNumber) 
+    {
         let BlockTur = document.querySelector(`#BlockTur-${turNumber}`);
         let countTur = BlockTur.querySelector("#infoButten");
         let count = countTur.value;
         count--;
         countTur.value = count;
     }
-    function selectParam(value, turNumber) {
+    function selectParam(value, turNumber) 
+    {
         let BlockTur = document.querySelector(`#BlockTur-${turNumber}`);
 
         let Aussen = BlockTur.querySelector(".aussen");
@@ -468,28 +474,35 @@
         });
     }
 
-    function foo() {
+    function foo() 
+    {
         localStorage.clear();
         createCustomCheckbox(`${blockTur}checkbox${blockCount}`);
     }
 
     window.onload = foo()
 
-    function removeBlockTur() {
+    function removeBlockTur() 
+    {
         let blockToRemove = document.getElementById('BlockTur-' + blockTur);
 
         if (blockToRemove) {
             blockToRemove.remove();
 
-            let Horizontal = document.getElementById(`${blockTur}horizontal`);
+            for (let i = 1; i <= blockCount; i++) 
+            {
+                let Horizontal = document.getElementById(`${blockTur}.checkboxContainer${i}`);
 
-            Horizontal.remove();
+                Horizontal.remove();
+            }
+           
 
             blockTur--;
         }
     }
 
-    function addBlockTur() {
+    function addBlockTur() 
+    {
         blockTur++;
 
         let newBlock = document.createElement('div');
@@ -513,27 +526,27 @@
 
                                     <div id="SelectTurItem">
                                             <select id="TypeSelectTurType"  onchange="selectParam(event.target.value,${blockTur})" name="ZylinderId">
-    @foreach (var list in ViewBag.Zylinder_Typ)
-    {
+                                            @foreach (var list in ViewBag.Zylinder_Typ)
+                                            {
                                               <option>@list.nameType</option>
-    }
+                                            }
                                         </select>
                                     </div>
 
                                     <div id="SelectTurItem">
                                             <select id="TypeSelectTurItem"  class="aussen" name="aussen">
-    @foreach (var list in ViewBag.DoppelAussen)
-    {
+                                            @foreach (var list in ViewBag.DoppelAussen)
+                                            {
                                                   <option id="OptionA">@list</option>
-    }
+                                            }
                                         </select>
                                     </div>
                                     <div id="SelectTurItem">
                                                 <select id="TypeSelectTurItem" class="Innen" name="innen">
-    @foreach (var list in ViewBag.DoppelIntern)
-    {
+                                                @foreach (var list in ViewBag.DoppelIntern)
+                                                {
                                                        <option id="OptionI">@list</option>
-    }
+                                                }
                                         </select>
                                     </div>
 
@@ -568,7 +581,8 @@
             createCustomCheckbox(`${blockTur}checkbox${i}`);
         }
     }
-    function removeBlock() {
+    function removeBlock() 
+    {
         let blockToRemove = document.getElementById('TexCount-' + blockCount);
 
         if (blockToRemove) {
